<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_travel">

    <fragment
        android:id="@+id/navigation_travel"
        android:name="com.example.myapplication.activity.ui.travel.TravelFragment"
        android:label="@string/title_travel"
        tools:layout="@layout/fragment_travel" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.myapplication.activity.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_visited"
        android:name="com.example.myapplication.activity.ui.visited.VisitedFragment"
        android:label="@string/title_visited"
        tools:layout="@layout/fragment_visited" />
</navigation>