<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fefefe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logo"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="My Travels"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/travel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_flight_takeoff_black_24dp"
        android:onClick="openView"
        android:paddingLeft="76dp"
        android:paddingRight="100dp"
        android:text="@string/travel_btn"
        app:layout_constraintBottom_toTopOf="@+id/map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_map_black_24dp"
        android:onClick="openTravelMaps"
        android:paddingLeft="76dp"
        android:paddingRight="100dp"
        android:text="@string/maps_btn"
        app:layout_constraintBottom_toTopOf="@+id/map_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/map_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_place_black_24dp"
        android:onClick="openCountryMaps"
        android:paddingLeft="76dp"
        android:paddingRight="100dp"
        android:text="@string/visited_btn"
        app:layout_constraintBottom_toTopOf="@+id/rand_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_flight_takeoff_black_24dp"
        android:onClick="randomMe"
        android:paddingLeft="76dp"
        android:paddingRight="100dp"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>